--- a/index.html
+++ b/index.html
@@ -3,104 +3,189 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Main Page</title>
   </head>
 
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>          
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-black">Studio</span></a
+        >
+        <ul class="navbar-list">
+          <li><a class="navbar" href="">Studio</a></li>
+          <li><a class="navbar" href="">Portfolio</a></li>
+          <li><a class="navbar" href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-        </ul>     
+        <ul class="my-info-list">
+          <li>
+            <a class="my-info" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="my-info" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
       </address>
     </header>
 
     <main>
-
-      <section>
-        <h1>
-          Effective Solutions
-          for Your Business
-        </h1>
-        <button type="button">Order Service</button>
+      <section class="table">
+        <h1 class="table-text">Effective Solutions for Your Business</h1>
+        <button type="button" class="table-button">Order Service</button>
       </section>
 
       <section>
         <h2>Our advantages</h2>
-        <ul>
-            <li>
-                <h3>Strategy</h3>
-                <p>
-                    Our goal is to identify the business problem to walk away with the
-                    perfect and creative solution.
-                </p>
-            </li>
-            <li>
-                <h3>Punctuality</h3>
-                <p>
-                    Bring the key message to the brand's audience for the best price
-                    within the shortest possible time.
-                </p>
-            </li>
-            <li>
-                <h3>Diligence</h3>
-                <p>
-                    Research and confirm brands that present the strongest digital
-                    growth opportunities and minimize risk.
-                </p>
-            </li>
-            <li>
-                <h3>Technologies</h3>
-                <p>
-                    Design practice focused on digital experiences. We bring forth a
-                    deep passion for problem-solving.
-                </p>
-            </li>
-        </ul>        
-      </section>
-
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-            <li>
-                <img src="./images/MarkGuerrero.jpg" alt="Mark Guerrero" width="264" />
-                <h3>Mark Guerrero</h3>
-                <p>Product Designer</p>
-            </li>
-            <li>
-                <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" />
-                <h3>Tom Ford</h3>
-                <p>Frontend Developer</p>
-            </li>
-            <li>
-                <img src="./images/CamilaGarcia.jpg" alt="Camila Garcia" width="264" />
-                <h3>Camila Garcia</h3>
-                <p>Marketing</p>
-            </li>
-            <li>
-                <img src="./images/DanielWilson.jpg" alt="Daniel Wilson" width="264" />
-                <h3>Daniel Wilson</h3>
-                <p>UI Designer</p>
-            </li>
+        <ul class="advantages-list">
+          <li>
+            <h3 class="advantages">Strategy</h3>
+            <p class="advantages-text">
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3 class="advantages">Punctuality</h3>
+            <p class="advantages-text">
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3 class="advantages">Diligence</h3>
+            <p class="advantages-text">
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3 class="advantages">Technologies</h3>
+            <p class="advantages-text">
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
         </ul>
       </section>
 
+      <section class="table-team">
+        <h2 class="team">Our Team</h2>
+        <ul class="team-list">
+          <li>
+            <img
+              src="./images/mark-guerrero.jpg"
+              alt="Mark Guerrero"
+              width="264"
+            />
+            <h3 class="team-name">Mark Guerrero</h3>
+            <p class="team-position">Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/tom-ford.jpg" alt="Tom Ford" width="264" />
+            <h3 class="team-name">Tom Ford</h3>
+            <p class="team-position">Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/camila-garcia.jpg"
+              alt="Camila Garcia"
+              width="264"
+            />
+            <h3 class="team-name">Camila Garcia</h3>
+            <p class="team-position">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/daniel-wilson.jpg"
+              alt="Daniel Wilson"
+              width="264"
+            />
+            <h3 class="team-name">Daniel Wilson</h3>
+            <p class="team-position">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2 class="portfolio">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li>
+            <img src="./images/banking-app.jpg" alt="Banking App" width="360" />
+            <h3 class="portfolio-name">Banking App</h3>
+            <p class="portfolio-text">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/cashless-payment.jpg"
+              alt="Cashless Payment"
+              width="360"
+            />
+            <h3 class="portfolio-name">Cashless Payment</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/meditation-app.jpg"
+              alt="Meditation App"
+              width="360"
+            />
+            <h3 class="portfolio-name">Meditation App</h3>
+            <p class="portfolio-text">App</p>
+          </li>
+        </ul>
+        <ul class="portfolio-list">
+          <li>
+            <img
+              src="./images/taxi-service.jpg"
+              alt="Taxi Service"
+              width="360"
+            />
+            <h3 class="portfolio-name">Taxi Service</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/screen-illustrations.jpg"
+              alt="Screen Illustrations"
+              width="360"
+            />
+            <h3 class="portfolio-name">Screen Illustrations</h3>
+            <p class="portfolio-text">Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/online-courses.jpg"
+              alt="Online Courses"
+              width="360"
+            />
+            <h3 class="portfolio-name">Online Courses</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
-        Increase the flow of customers and
-        sales for your business with digital
+      <a class="logo" href="./index.html"
+        >Web<span class="logo-white">Studio</span></a
+      >
+      <p class="last-text">
+        Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
