--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
           >Web<span class="logo-black">Studio</span></a
         >
         <ul class="navbar-list">
-          <li><a class="navbar" href="">Studio</a></li>
+          <li><a class="navbar" href="./index.html">Studio</a></li>
           <li><a class="navbar" href="">Portfolio</a></li>
           <li><a class="navbar" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="my-address">
         <ul class="my-info-list">
           <li>
             <a class="my-info" href="mailto:info@devstudio.com"
@@ -52,7 +52,7 @@
       <section>
         <h2>Our advantages</h2>
         <ul class="advantages-list">
-          <li>
+          <li class="advantages-box">
             <h3 class="advantages">Strategy</h3>
             <p class="advantages-text">
               Our goal is to identify the business problem to walk away with the
@@ -147,8 +147,6 @@
             <h3 class="portfolio-name">Meditation App</h3>
             <p class="portfolio-text">App</p>
           </li>
-        </ul>
-        <ul class="portfolio-list">
           <li>
             <img
               src="./images/taxi-service.jpg"
@@ -180,7 +178,7 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="bottombar">
       <a class="logo" href="./index.html"
         >Web<span class="logo-white">Studio</span></a
       >
