--- a/index.html
+++ b/index.html
@@ -59,21 +59,21 @@
               perfect and creative solution.
             </p>
           </li>
-          <li>
+          <li class="advantages-box">
             <h3 class="advantages">Punctuality</h3>
             <p class="advantages-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
+          <li class="advantages-box">
             <h3 class="advantages">Diligence</h3>
             <p class="advantages-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
+          <li class="advantages-box">
             <h3 class="advantages">Technologies</h3>
             <p class="advantages-text">
               Design practice focused on digital experiences. We bring forth a
@@ -86,7 +86,7 @@
       <section class="table-team">
         <h2 class="team">Our Team</h2>
         <ul class="team-list">
-          <li>
+          <li class="team-page">
             <img
               src="./images/mark-guerrero.jpg"
               alt="Mark Guerrero"
@@ -95,12 +95,12 @@
             <h3 class="team-name">Mark Guerrero</h3>
             <p class="team-position">Product Designer</p>
           </li>
-          <li>
+          <li class="team-page">
             <img src="./images/tom-ford.jpg" alt="Tom Ford" width="264" />
             <h3 class="team-name">Tom Ford</h3>
             <p class="team-position">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-page">
             <img
               src="./images/camila-garcia.jpg"
               alt="Camila Garcia"
@@ -109,7 +109,7 @@
             <h3 class="team-name">Camila Garcia</h3>
             <p class="team-position">Marketing</p>
           </li>
-          <li>
+          <li class="team-page">
             <img
               src="./images/daniel-wilson.jpg"
               alt="Daniel Wilson"
