--- a/index.html
+++ b/index.html
@@ -89,15 +89,15 @@
           <li class="team-page">
             <img
               src="./images/mark-guerrero.jpg"
-              alt="Mark Guerrero"
+              alt="Mark guerrero"
               width="264"
             />
-            <h3 class="team-name">Mark Guerrero</h3>
+            <h3 class="team-name">Mark guerrero</h3>
             <p class="team-position">Product Designer</p>
           </li>
           <li class="team-page">
             <img src="./images/tom-ford.jpg" alt="Tom Ford" width="264" />
-            <h3 class="team-name">Tom Ford</h3>
+            <h3 class="team-name">Tom ford</h3>
             <p class="team-position">Frontend Developer</p>
           </li>
           <li class="team-page">
@@ -106,7 +106,7 @@
               alt="Camila Garcia"
               width="264"
             />
-            <h3 class="team-name">Camila Garcia</h3>
+            <h3 class="team-name">Camila garcia</h3>
             <p class="team-position">Marketing</p>
           </li>
           <li class="team-page">
@@ -115,7 +115,7 @@
               alt="Daniel Wilson"
               width="264"
             />
-            <h3 class="team-name">Daniel Wilson</h3>
+            <h3 class="team-name">Daniel wilson</h3>
             <p class="team-position">UI Designer</p>
           </li>
         </ul>
