--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <ul class="portfolio-list">
           <li>
             <img src="./images/banking-app.jpg" alt="Banking App" width="360" />
-            <h3 class="portfolio-name">Banking App</h3>
+            <h3 class="portfolio-name">Banking app</h3>
             <p class="portfolio-text">App</p>
           </li>
           <li>
@@ -135,7 +135,7 @@
               alt="Cashless Payment"
               width="360"
             />
-            <h3 class="portfolio-name">Cashless Payment</h3>
+            <h3 class="portfolio-name">Cashless payment</h3>
             <p class="portfolio-text">Marketing</p>
           </li>
           <li>
@@ -144,7 +144,7 @@
               alt="Meditation App"
               width="360"
             />
-            <h3 class="portfolio-name">Meditation App</h3>
+            <h3 class="portfolio-name">Meditation app</h3>
             <p class="portfolio-text">App</p>
           </li>
           <li>
@@ -153,7 +153,7 @@
               alt="Taxi Service"
               width="360"
             />
-            <h3 class="portfolio-name">Taxi Service</h3>
+            <h3 class="portfolio-name">Taxi service</h3>
             <p class="portfolio-text">Marketing</p>
           </li>
           <li>
@@ -162,7 +162,7 @@
               alt="Screen Illustrations"
               width="360"
             />
-            <h3 class="portfolio-name">Screen Illustrations</h3>
+            <h3 class="portfolio-name">Screen illustrations</h3>
             <p class="portfolio-text">Design</p>
           </li>
           <li>
@@ -171,7 +171,7 @@
               alt="Online Courses"
               width="360"
             />
-            <h3 class="portfolio-name">Online Courses</h3>
+            <h3 class="portfolio-name">Online courses</h3>
             <p class="portfolio-text">Marketing</p>
           </li>
         </ul>
