--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <body>
     <header class="header-wrap">
-      <div class="container-header">
+      <div class="container container-header">
         <nav class="nav-wrap">
           <a class="logo" href="./index.html"
             >Web<span class="logo-black">Studio</span></a
@@ -52,7 +52,7 @@
 
     <main>
       <section class="table">
-        <div class="container-table">
+        <div class="container">
           <h1 class="table-text">Effective Solutions for Your Business</h1>
           <button type="button" class="table-button">Order Service</button>
         </div>
