--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
             >Web<span class="logo-black">Studio</span></a
           >
           <ul class="navbar-list">
-            <li><a class="navbar" href="./index.html">Studio</a></li>
-            <li><a class="navbar" href="">Portfolio</a></li>
-            <li><a class="navbar" href="">Contacts</a></li>
+            <li class="navbar-iteam">
+              <a class="navbar active" href="./index.html">Studio</a>
+            </li>
+            <li class="navbar-iteam">
+              <a class="navbar" href="">Portfolio</a>
+            </li>
+            <li class="navbar-iteam"><a class="navbar" href="">Contacts</a></li>
           </ul>
         </nav>
         <address class="my-address">
@@ -63,6 +67,11 @@
           <h2 class="our-advatages">Our advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-box">
+              <div class="svg-box">
+                <svg class="svg-box-image" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="advantages">Strategy</h3>
               <p class="advantages-text">
                 Our goal is to identify the business problem to walk away with
@@ -70,6 +79,11 @@
               </p>
             </li>
             <li class="advantages-box">
+              <div class="svg-box">
+                <svg class="svg-box-image" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="advantages">Punctuality</h3>
               <p class="advantages-text">
                 Bring the key message to the brand's audience for the best price
@@ -77,6 +91,11 @@
               </p>
             </li>
             <li class="advantages-box">
+              <div class="svg-box">
+                <svg class="svg-box-image" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="advantages">Diligence</h3>
               <p class="advantages-text">
                 Research and confirm brands that present the strongest digital
@@ -84,6 +103,11 @@
               </p>
             </li>
             <li class="advantages-box">
+              <div class="svg-box">
+                <svg class="svg-box-image" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="advantages">Technologies</h3>
               <p class="advantages-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -107,6 +131,62 @@
               <div class="team-info">
                 <h3 class="team-name">Mark guerrero</h3>
                 <p class="team-position">Product Designer</p>
+                <div class="sothial-box">
+                  <ul class="sothial-menu">
+                    <li class="sothial-items">
+                      <a href="https://www.instagram.com/" target="_blank">
+                        <svg
+                          class="sothial-items-picture"
+                          width="16"
+                          height="16"
+                        >
+                          <use
+                            href="./images/symbol-defs.svg#icon-instagram-2"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="sothial-items">
+                      <a href="https://www.twitter.com/" target="_blank">
+                        <svg
+                          class="sothial-items-picture"
+                          width="16"
+                          height="16"
+                        >
+                          <use
+                            href="./images/symbol-defs.svg#icon-twitter-1"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="sothial-items">
+                      <a href="https://www.facebook.com/">
+                        <svg
+                          class="sothial-items-picture"
+                          width="16"
+                          height="16"
+                        >
+                          <use
+                            href="./images/symbol-defs.svg#icon-facebook-1"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="sothial-items">
+                      <a href="https://ua.linkedin.com/" target="_blank">
+                        <svg
+                          class="sothial-items-picture"
+                          width="16"
+                          height="16"
+                        >
+                          <use
+                            href="./images/symbol-defs.svg#icon-linkedin-1"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-page">
@@ -114,6 +194,62 @@
               <div class="team-info">
                 <h3 class="team-name">Tom ford</h3>
                 <p class="team-position">Frontend Developer</p>
+                <div class="sothial-box">
+                  <ul class="sothial-menu">
+                    <li class="sothial-items">
+                      <a href="https://www.instagram.com/" target="_blank">
+                        <svg
+                          class="sothial-items-picture"
+                          width="16"
+                          height="16"
+                        >
+                          <use
+                            href="./images/symbol-defs.svg#icon-instagram-2"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="sothial-items">
+                      <a href="https://www.twitter.com/" target="_blank">
+                        <svg
+                          class="sothial-items-picture"
+                          width="16"
+                          height="16"
+                        >
+                          <use
+                            href="./images/symbol-defs.svg#icon-twitter-1"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="sothial-items">
+                      <a href="https://www.facebook.com/">
+                        <svg
+                          class="sothial-items-picture"
+                          width="16"
+                          height="16"
+                        >
+                          <use
+                            href="./images/symbol-defs.svg#icon-facebook-1"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="sothial-items">
+                      <a href="https://ua.linkedin.com/" target="_blank">
+                        <svg
+                          class="sothial-items-picture"
+                          width="16"
+                          height="16"
+                        >
+                          <use
+                            href="./images/symbol-defs.svg#icon-linkedin-1"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-page">
@@ -125,6 +261,62 @@
               <div class="team-info">
                 <h3 class="team-name">Camila garcia</h3>
                 <p class="team-position">Marketing</p>
+                <div class="sothial-box">
+                  <ul class="sothial-menu">
+                    <li class="sothial-items">
+                      <a href="https://www.instagram.com/" target="_blank">
+                        <svg
+                          class="sothial-items-picture"
+                          width="16"
+                          height="16"
+                        >
+                          <use
+                            href="./images/symbol-defs.svg#icon-instagram-2"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="sothial-items">
+                      <a href="https://www.twitter.com/" target="_blank">
+                        <svg
+                          class="sothial-items-picture"
+                          width="16"
+                          height="16"
+                        >
+                          <use
+                            href="./images/symbol-defs.svg#icon-twitter-1"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="sothial-items">
+                      <a href="https://www.facebook.com/">
+                        <svg
+                          class="sothial-items-picture"
+                          width="16"
+                          height="16"
+                        >
+                          <use
+                            href="./images/symbol-defs.svg#icon-facebook-1"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="sothial-items">
+                      <a href="https://ua.linkedin.com/" target="_blank">
+                        <svg
+                          class="sothial-items-picture"
+                          width="16"
+                          height="16"
+                        >
+                          <use
+                            href="./images/symbol-defs.svg#icon-linkedin-1"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
             <li class="team-page">
@@ -136,6 +328,62 @@
               <div class="team-info">
                 <h3 class="team-name">Daniel wilson</h3>
                 <p class="team-position">UI Designer</p>
+                <div class="sothial-box">
+                  <ul class="sothial-menu">
+                    <li class="sothial-items">
+                      <a href="https://www.instagram.com/" target="_blank">
+                        <svg
+                          class="sothial-items-picture"
+                          width="16"
+                          height="16"
+                        >
+                          <use
+                            href="./images/symbol-defs.svg#icon-instagram-2"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="sothial-items">
+                      <a href="https://www.twitter.com/" target="_blank">
+                        <svg
+                          class="sothial-items-picture"
+                          width="16"
+                          height="16"
+                        >
+                          <use
+                            href="./images/symbol-defs.svg#icon-twitter-1"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="sothial-items">
+                      <a href="https://www.facebook.com/">
+                        <svg
+                          class="sothial-items-picture"
+                          width="16"
+                          height="16"
+                        >
+                          <use
+                            href="./images/symbol-defs.svg#icon-facebook-1"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="sothial-items">
+                      <a href="https://ua.linkedin.com/" target="_blank">
+                        <svg
+                          class="sothial-items-picture"
+                          width="16"
+                          height="16"
+                        >
+                          <use
+                            href="./images/symbol-defs.svg#icon-linkedin-1"
+                          ></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </li>
           </ul>
@@ -218,14 +466,53 @@
     </main>
 
     <footer class="bottombar">
-      <div class="container">
-        <a class="logo logo-bottom" href="./index.html"
-          >Web<span class="logo-white">Studio</span></a
-        >
-        <p class="last-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container bottom-container">
+        <div class="first-container">
+          <a class="logo logo-bottom" href="./index.html"
+            >Web<span class="logo-white">Studio</span></a
+          >
+          <p class="last-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>        
+        </div>
+        <div class="second-container">          
+          <div class="second-container">
+            <p class="social-text">Social media</p>
+            <div class="sothial-box">
+              <ul class="sothial-menu">
+                <li class="sothial-items">
+                  <a href="https://www.instagram.com/" target="_blank">
+                    <svg class="sothial-items-picture" width="16" height="16">
+                      <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="sothial-items">
+                  <a href="https://www.twitter.com/" target="_blank">
+                    <svg class="sothial-items-picture" width="16" height="16">
+                      <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="sothial-items">
+                  <a href="https://www.facebook.com/">
+                    <svg class="sothial-items-picture" width="16" height="16">
+                      <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="sothial-items">
+                  <a href="https://ua.linkedin.com/" target="_blank">
+                    <svg class="sothial-items-picture" width="16" height="16">
+                      <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
