--- a/index.html
+++ b/index.html
@@ -395,66 +395,120 @@
           <h2 class="portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                src="./images/banking-app.jpg"
-                alt="Banking App"
-                width="360"
-              />
+              <div class="portfolio-blue-box">
+                <img
+                  src="./images/banking-app.jpg"
+                  alt="Banking App"
+                  width="360"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-wrapper">
                 <h3 class="portfolio-name">Banking App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/cashless-payment.jpg"
-                alt="Cashless Payment"
-                width="360"
-              />
+              <div class="portfolio-blue-box">
+                <img
+                  src="./images/cashless-payment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-wrapper">
                 <h3 class="portfolio-name">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/meditation-app.jpg"
-                alt="Meditation App"
-                width="360"
-              />
+              <div class="portfolio-blue-box">
+                <img
+                  src="./images/meditation-app.jpg"
+                  alt="Meditation App"
+                  width="360"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-wrapper">
                 <h3 class="portfolio-name">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/taxi-service.jpg"
-                alt="Taxi Service"
-                width="360"
-              />
+              <div class="portfolio-blue-box">
+                <img
+                  src="./images/taxi-service.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-wrapper">
                 <h3 class="portfolio-name">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/screen-illustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-              />
+              <div class="portfolio-blue-box">
+                <img
+                  src="./images/screen-illustrations.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-wrapper">
                 <h3 class="portfolio-name">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/online-courses.jpg"
-                alt="Online Courses"
-                width="360"
-              />
+              <div class="portfolio-blue-box">
+                <img
+                  src="./images/online-courses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-wrapper">
                 <h3 class="portfolio-name">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -474,9 +528,9 @@
           <p class="last-text">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
-          </p>        
+          </p>
         </div>
-        <div class="second-container">          
+        <div class="second-container">
           <div class="second-container">
             <p class="social-text">Social media</p>
             <div class="sothial-box">
@@ -484,7 +538,9 @@
                 <li class="sothial-items">
                   <a href="https://www.instagram.com/" target="_blank">
                     <svg class="sothial-items-picture" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                      <use
+                        href="./images/symbol-defs.svg#icon-instagram-2"
+                      ></use>
                     </svg>
                   </a>
                 </li>
@@ -498,14 +554,18 @@
                 <li class="sothial-items">
                   <a href="https://www.facebook.com/">
                     <svg class="sothial-items-picture" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                      <use
+                        href="./images/symbol-defs.svg#icon-facebook-1"
+                      ></use>
                     </svg>
                   </a>
                 </li>
                 <li class="sothial-items">
                   <a href="https://ua.linkedin.com/" target="_blank">
                     <svg class="sothial-items-picture" width="16" height="16">
-                      <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                      <use
+                        href="./images/symbol-defs.svg#icon-linkedin-1"
+                      ></use>
                     </svg>
                   </a>
                 </li>
