--- a/index.html
+++ b/index.html
@@ -137,28 +137,44 @@
                 <p class="team-position">Product Designer</p>
                 <ul class="sothial-menu">
                   <li class="sothial-items">
-                    <a href="https://www.instagram.com/" target="_blank">
+                    <a
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                      class="sothial-items-href"
+                    >
                       <svg class="sothial-items-picture" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="sothial-items">
-                    <a href="https://www.twitter.com/" target="_blank">
+                    <a
+                      href="https://www.twitter.com/"
+                      target="_blank"
+                      class="sothial-items-href"
+                    >
                       <svg class="sothial-items-picture" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="sothial-items">
-                    <a href="https://www.facebook.com/">
+                    <a
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                      class="sothial-items-href"
+                    >
                       <svg class="sothial-items-picture" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="sothial-items">
-                    <a href="https://ua.linkedin.com/" target="_blank">
+                    <a
+                      href="https://ua.linkedin.com/"
+                      target="_blank"
+                      class="sothial-items-href"
+                    >
                       <svg class="sothial-items-picture" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
@@ -174,28 +190,44 @@
                 <p class="team-position">Frontend Developer</p>
                 <ul class="sothial-menu">
                   <li class="sothial-items">
-                    <a href="https://www.instagram.com/" target="_blank">
+                    <a
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                      class="sothial-items-href"
+                    >
                       <svg class="sothial-items-picture" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="sothial-items">
-                    <a href="https://www.twitter.com/" target="_blank">
+                    <a
+                      href="https://www.twitter.com/"
+                      target="_blank"
+                      class="sothial-items-href"
+                    >
                       <svg class="sothial-items-picture" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="sothial-items">
-                    <a href="https://www.facebook.com/">
+                    <a
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                      class="sothial-items-href"
+                    >
                       <svg class="sothial-items-picture" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="sothial-items">
-                    <a href="https://ua.linkedin.com/" target="_blank">
+                    <a
+                      href="https://ua.linkedin.com/"
+                      target="_blank"
+                      class="sothial-items-href"
+                    >
                       <svg class="sothial-items-picture" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
@@ -215,28 +247,44 @@
                 <p class="team-position">Marketing</p>
                 <ul class="sothial-menu">
                   <li class="sothial-items">
-                    <a href="https://www.instagram.com/" target="_blank">
+                    <a
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                      class="sothial-items-href"
+                    >
                       <svg class="sothial-items-picture" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="sothial-items">
-                    <a href="https://www.twitter.com/" target="_blank">
+                    <a
+                      href="https://www.twitter.com/"
+                      target="_blank"
+                      class="sothial-items-href"
+                    >
                       <svg class="sothial-items-picture" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="sothial-items">
-                    <a href="https://www.facebook.com/">
+                    <a
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                      class="sothial-items-href"
+                    >
                       <svg class="sothial-items-picture" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="sothial-items">
-                    <a href="https://ua.linkedin.com/" target="_blank">
+                    <a
+                      href="https://ua.linkedin.com/"
+                      target="_blank"
+                      class="sothial-items-href"
+                    >
                       <svg class="sothial-items-picture" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
@@ -256,28 +304,44 @@
                 <p class="team-position">UI Designer</p>
                 <ul class="sothial-menu">
                   <li class="sothial-items">
-                    <a href="https://www.instagram.com/" target="_blank">
+                    <a
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                      class="sothial-items-href"
+                    >
                       <svg class="sothial-items-picture" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="sothial-items">
-                    <a href="https://www.twitter.com/" target="_blank">
+                    <a
+                      href="https://www.twitter.com/"
+                      target="_blank"
+                      class="sothial-items-href"
+                    >
                       <svg class="sothial-items-picture" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="sothial-items">
-                    <a href="https://www.facebook.com/">
+                    <a
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                      class="sothial-items-href"
+                    >
                       <svg class="sothial-items-picture" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="sothial-items">
-                    <a href="https://ua.linkedin.com/" target="_blank">
+                    <a
+                      href="https://ua.linkedin.com/"
+                      target="_blank"
+                      class="sothial-items-href"
+                    >
                       <svg class="sothial-items-picture" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
@@ -303,7 +367,7 @@
                   width="360"
                 />
                 <div class="overlay">
-                  <p class="overlay-text">
+                  <p class="up-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -434,38 +498,36 @@
         </div>
         <div class="second-container">
           <p class="social-text">Social media</p>
-          <div class="sothial-box">
-            <ul class="sothial-menu">
-              <li class="sothial-items">
-                <a href="https://www.instagram.com/" target="_blank">
-                  <svg class="sothial-items-picture" width="16" height="16">
-                    <use href="./images/icons.svg#icon-instagram-2"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="sothial-items">
-                <a href="https://www.twitter.com/" target="_blank">
-                  <svg class="sothial-items-picture" width="16" height="16">
-                    <use href="./images/icons.svg#icon-twitter-1"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="sothial-items">
-                <a href="https://www.facebook.com/">
-                  <svg class="sothial-items-picture" width="16" height="16">
-                    <use href="./images/icons.svg#icon-facebook-1"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="sothial-items">
-                <a href="https://ua.linkedin.com/" target="_blank">
-                  <svg class="sothial-items-picture" width="16" height="16">
-                    <use href="./images/icons.svg#icon-linkedin-1"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
+          <ul class="sothial-menu-bottom">
+            <li class="sothial-items-bottom">
+              <a href="https://www.instagram.com/" target="_blank" class="sothial-items-href-bottom">
+                <svg class="sothial-items-picture" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="sothial-items-bottom">
+              <a href="https://www.twitter.com/" target="_blank" class="sothial-items-href-bottom">
+                <svg class="sothial-items-picture" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="sothial-items-bottom">
+              <a href="https://www.facebook.com/" target="_blank" class="sothial-items-href-bottom">
+                <svg class="sothial-items-picture" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="sothial-items-bottom">
+              <a href="https://ua.linkedin.com/" target="_blank" class="sothial-items-href-bottom">
+                <svg class="sothial-items-picture" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
