--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                   width="360"
                 />
                 <div class="overlay">
-                  <p class="overlay-text">
+                  <p class="up-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -407,7 +407,7 @@
                   width="360"
                 />
                 <div class="overlay">
-                  <p class="overlay-text">
+                  <p class="up-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -427,7 +427,7 @@
                   width="360"
                 />
                 <div class="overlay">
-                  <p class="overlay-text">
+                  <p class="up-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -447,7 +447,7 @@
                   width="360"
                 />
                 <div class="overlay">
-                  <p class="overlay-text">
+                  <p class="up-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -467,7 +467,7 @@
                   width="360"
                 />
                 <div class="overlay">
-                  <p class="overlay-text">
+                  <p class="up-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
