--- a/index.html
+++ b/index.html
@@ -366,13 +366,11 @@
                   alt="Banking App"
                   width="360"
                 />
-                <div class="overlay">
-                  <p class="up-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="up-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-wrapper">
                 <h3 class="portfolio-name">Banking App</h3>
@@ -386,13 +384,11 @@
                   alt="Cashless Payment"
                   width="360"
                 />
-                <div class="overlay">
-                  <p class="up-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="up-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-wrapper">
                 <h3 class="portfolio-name">Cashless Payment</h3>
@@ -406,13 +402,11 @@
                   alt="Meditation App"
                   width="360"
                 />
-                <div class="overlay">
-                  <p class="up-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="up-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-wrapper">
                 <h3 class="portfolio-name">Meditation App</h3>
@@ -426,13 +420,11 @@
                   alt="Taxi Service"
                   width="360"
                 />
-                <div class="overlay">
-                  <p class="up-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="up-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-wrapper">
                 <h3 class="portfolio-name">Taxi Service</h3>
@@ -446,13 +438,11 @@
                   alt="Screen Illustrations"
                   width="360"
                 />
-                <div class="overlay">
-                  <p class="up-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="up-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-wrapper">
                 <h3 class="portfolio-name">Screen Illustrations</h3>
@@ -466,13 +456,11 @@
                   alt="Online Courses"
                   width="360"
                 />
-                <div class="overlay">
-                  <p class="up-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="up-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-wrapper">
                 <h3 class="portfolio-name">Online Courses</h3>
@@ -500,28 +488,44 @@
           <p class="social-text">Social media</p>
           <ul class="sothial-menu-bottom">
             <li class="sothial-items-bottom">
-              <a href="https://www.instagram.com/" target="_blank" class="sothial-items-href-bottom">
+              <a
+                href="https://www.instagram.com/"
+                target="_blank"
+                class="sothial-items-href-bottom"
+              >
                 <svg class="sothial-items-picture" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="sothial-items-bottom">
-              <a href="https://www.twitter.com/" target="_blank" class="sothial-items-href-bottom">
+              <a
+                href="https://www.twitter.com/"
+                target="_blank"
+                class="sothial-items-href-bottom"
+              >
                 <svg class="sothial-items-picture" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="sothial-items-bottom">
-              <a href="https://www.facebook.com/" target="_blank" class="sothial-items-href-bottom">
+              <a
+                href="https://www.facebook.com/"
+                target="_blank"
+                class="sothial-items-href-bottom"
+              >
                 <svg class="sothial-items-picture" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="sothial-items-bottom">
-              <a href="https://ua.linkedin.com/" target="_blank" class="sothial-items-href-bottom">
+              <a
+                href="https://ua.linkedin.com/"
+                target="_blank"
+                class="sothial-items-href-bottom"
+              >
                 <svg class="sothial-items-picture" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
